Marking application-api as @NullMarked. Replacing Pair/Couple with records. Default constructor of UserDataCache is removed in favor of new constructor accepting explicit key. Some localization.