@@ -13,6 +13,8 @@ import org.jetbrains.annotations.TestOnly;
 
 import org.jspecify.annotations.Nullable;
 
+import java.util.Objects;
+
 /**
  * @author peter
  */
@@ -49,7 +51,7 @@ public class CamelHumpMatcher extends PrefixMatcher {
     for (String s : CompletionUtilCore.iterateLookupStrings(element)) {
       FList<MatcherTextRange> ranges = myCaseInsensitiveMatcher.matchingFragments(s);
       if (ranges == null) continue;
-      if (ranges.isEmpty() || skipUnderscores(s) >= ranges.get(0).getStartOffset()) {
+      if (ranges.isEmpty() || skipUnderscores(s) >= Objects.requireNonNull(ranges.getFirst()).getStartOffset()) {
         return true;
       }
     }
